updating package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,16 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "zod": "^3.22.4"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
