--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 JWT_SECRET = SECRET-APP-ONLINE
-MONGO_URL ='mongodb+srv://rithwhickpraharshabandaru:testing@123@cluster0.baokkzm.mongodb.net/SECRET-APP'
+MONGO_URL ='mongodb+srv://rithwhickpraharshabandaru:test123@cluster0.baokkzm.mongodb.net/SECRET-APP'
